# agent-repl

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
.github/workflows/: release.yml
dev/: README.md  architecture-modernization-plan.md  browser-verification-guide.md  core-guide.md  current-architecture.md  extension-guide.md  jupyter-parity-checklist.md  jupyterlab-shortcuts.md  mcp_dos_and_donts.md
dev/behavior-locks/: README.md  behavior-inventory.md  browser-canvas.md  cli-core.md  extension-runtime.md  v1-architecture.md
dev/design/: README.md  agreed-v1-architecture.md  founding-architecture.md  greenfield-architecture.md  joint-canvas-rollout.md  joint-canvas-spec.md  (+3 more)
docs/: DOC_STYLE.md  SUMMARY.md  architecture.md  cell-directives.md  commands.md  getting-started.md  git-integration.md  index.md  installation.md  mcp.md  onboarding.md  output-filtering.md  prompt-loop.md
examples/: demo-basics.ipynb  demo-checkpoint.ipynb  demo-progress.ipynb  demo-slow.ipynb  demo-streaming.ipynb
extension/: .vscodeignore  package-lock.json  package.json  preview.html  tsconfig.json
scripts/: agent_repl.py
tests/: support.py  test_agent_repl.py  test_async_execution.py  test_core_asgi.py  test_core_checkpoint_http_routes.py  test_core_checkpoint_service.py  test_core_collaboration_http_routes.py  test_core_collaboration_service.py  test_core_db.py  test_core_document_http_routes.py  test_core_mcp.py  test_core_notebook_http_routes.py  test_core_notebook_requests.py  test_core_notebook_trust.py  test_core_notebook_write_service.py  test_core_requests.py  test_core_runtime_http_routes.py  test_core_ws_transport.py  test_core_ydoc_service.py  test_ws_reconnect.py  test_ydoc_spike.py
tmp/: agent-repl-v2-architecture.md  agent-repl-v2.md
(+174 files in other folders)
