[project]
name = "agent-repl"
version = "0.3.0"
description = "CLI for AI agents to work with Jupyter notebooks via the VS Code bridge"
requires-python = ">=3.10"
dependencies = [
    "jupyter-client>=8",
    "nbformat>=5",
    "requests>=2",
]

[project.scripts]
agent-repl = "agent_repl.cli:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_repl"]

[dependency-groups]
dev = [
    "pytest",
]
